# news-getter

./: .gitignore  CLAUDE.md  SETUP.md  api.py  main.py  news_server.py  pyproject.toml  requirements.txt  setup.sh
database/: database.py  migrations.py
docs/: API.md  architecture.md
models/: models.py
services/: news_aggregator.py  processor.py  utils.py
services/core/: cache_manager.py  deps.py
